# Chess-Engine-Test

./: Algorithm explanation.txt  README.md
D/: main.d
Go/: .golangci.yaml  Justfile  Perft.go  bbconstants.go  bbutils.go  board.go  boardconstants.go  boardutils.go  fen.go  generatemoves.go  go.mod  main.go  moveconstants.go  piececonstants.go  printing.go
Go/t/: output.t
Python/: README.md  engine.py  justfile  pyproject.toml  test_engine.py
Rust/: main.rs
Zig/: main.zig
cpp/: chess_move_generator.cpp
docs/: bitboard-algorithm.md
